objects/TODO__c.object
<CustomObject>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>Due_Date__c + 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <label>Task</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>TODO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TODO-{0000}</displayFormat>
        <label>TODO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TODOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>